# uv_project

./: CMakeLists.txt  README.md  package.xml
config/: sensors.yaml
data_plots/: Data.tar.xz  camera_data_1.csv  camera_data_10.csv  camera_data_2.csv  camera_data_3.csv  camera_data_4.csv  camera_data_5.csv  camera_data_6.csv  camera_data_7.csv  camera_data_8.csv  camera_data_9.csv  data_1.csv  data_10.csv  data_2.csv  data_3.csv  data_4.csv  data_5.csv  data_6.csv  data_7.csv  data_9.csv  plot_camera_data.py  sensor_data.csv  updated_data.tar.xz
data_plots/cone/: 3D_plot.py  Alan_cone.csv  UV_dose_plot.py  cone1.csv  cone2.csv  cone3.csv  cone4.csv  cone6.csv  cone_data.csv  ever_cone.csv  feedback_cone_1.csv  feedback_cone_2.csv  feedback_cone_3.csv  hard_coded_cone_data.csv  hard_coded_path.csv  luis_cone.csv  no_feedback_cone_1.csv  output.csv  (+4 more)
include/: accumulation.h
launch/: bringup.launch  camera.launch  combine_image_depthmap.launch  fetch_moveit_sensor_manager.launch.xml  move_group.launch  nodes.launch  octomap_primesense_setup.launch  rviz_setup.launch  sensor_manager.launch.xml  short_table_gazebo.launch  updated_urdf.launch  uv_accumulator.launch
robots/: fetch.gazebo.xacro  fetch.urdf
rviz/: default.rviz
saved_trajectories/: 1D_pass.yaml  FB_cone_1.pkl  FB_cone_2.pkl  FB_cone_3.pkl  FB_mug_1.pkl  FB_mug_2.pkl  FB_mug_3.pkl  FB_table_1.pkl  FB_table_2.pkl  FB_table_3.pkl  NF_cone_1.pkl  NF_cone_2.pkl  NF_cone_3.pkl  NF_mug_1.pkl  NF_mug_2.pkl  NF_mug_3.pkl  NF_table_1.pkl  NF_table_2.pkl  NF_table_3.pkl  cone.yaml  cone2.pkl  fake_test.json  feedback_mug_2.yaml  feedback_mug_3.yaml  mug.yaml  mug_b.yaml  no_feed_1.json  no_feed_mug_1.yaml  no_feed_mug_2.json  no_feed_mug_3.json  no_feed_mug_3.yaml  record.py  replay.py  sensor_array.pkl  sensor_array.yaml  table.yaml  table_region.pkl  test.json  test.yaml  test2.json  (+13 more)
src/: accumulation.cpp  accumulation_map.py  best_fit.py  camera_tf_broadcaster.py  capture_image.py  chatGPT.py  conical_angle.py  continous_playback.py  ee_locator.py  ee_recorder.py  execute_basic_coverage.py  execute_cone_coverage.py  execute_hard_coded_path.py  execute_mug_coverage.py  execute_saved_trajectory.py  execute_table_path.py  grid_based_sweep_coverage_path_planner.py  image_filter.py  in_polygon_check.cpp  interface.py  irradiance_model.py  irradiance_vectors.py  octomap_converter.py  octomap_publisher_test.py  old_accumulation_map.py  prepare_simulated_robot.py  region_generator.py  relax_arm_control.py  replay.py  save_octree.py  stop_command.py  transform_accumulation_merge.py  transform_pcl.cpp  transform_pcl.py  transform_pcl_viewer.py  tuck_arm.py  uv_model.cpp  uvgi_math_model.py  velocity_regulator.py  visualize_vectors.py  (+1 more)
(+104 files in other folders)
